--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "axios": "^0.27.0",
     "expo": "~44.0.0",
+    "expo-location": "~14.0.1",
     "expo-status-bar": "~1.2.0",
+    "express": "^4.18.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-web": "0.17.1"
+    "react-native-get-random-values": "^1.7.2",
+    "react-native-web": "0.17.1",
+    "url": "^0.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
